--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
